--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p class="paper-title">Semi-supervised Learning of Camera Motion from a Blurred Image</p>
                     Nimisha T M, Vijay Rengarajan, and A.N.Rajagopalan<br>
                     International Conference on Image Processing<br>
-                    <b>ICIP 2018</b><br>
+                    <b>ICIP 2018 (Oral)</b><br>
                     <a href="pdf/2018_icip.pdf">Paper</a>
                 </td>
             </tr>
