--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p class="paper-title">Illumination Robust Change Detection with CMOS Imaging Sensors</p>
                     Vijay Rengarajan, Sheetal B. Gupta, A.N. Rajagopalan, and Guna Seetharaman<br>
                     SPIE Defense + Security Symposium, International Society for Optics and Photonics<br>
-                    <b>SPIE 2015</b><br>
+                    <b>SPIE 2015 (Oral)</b><br>
                     <a href="pdf/2015_spie.pdf">Paper</a> 
                 </td>
             </tr>
@@ -201,7 +201,7 @@
                     <p class="paper-title">Efficient Change Detection for Very Large Motion Blurred Images</p>
                     Vijay Rengarajan, Abhijith Punnappurath, A.N. Rajagopalan, and Guna Seetharaman<br>
                     CVPR Workshop on Registration of Very Large Images<br>
-                    <b>CVPRW 2014</b><br>
+                    <b>CVPRW 2014 (Oral)</b><br>
                     <a href="pdf/2014_cvprw.pdf">Paper</a> 
                 </td>
             </tr>
