--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
             </tr>
         </table>
         
+        <h2>Awards and Grants</h2>
+        <hr>
+        Received USD 3000 travel grant from Google for CVPR 2017<br>
+        Selected for CVPR 2016 Docotoral Consortium<br>
+        Institute Research Scholar Award, IIT Madras, 2015<br><br>
+
+
         <h2>Social Activities</h2>
         <hr>
         I have been an avid supporter of LGBTQ rights. I have helped founding Vannam (meaning color), the LGBTQ support
