--- a/index.html
+++ b/index.html
@@ -206,7 +206,21 @@
                 </td>
             </tr>
         </table>
-        
+
+        <h2>Academic Talks</h2>
+        <hr>
+        <table> 
+        <tr><td class="dissem">May 5, 2018</td><td class="dissem">Poster presentation at ICCP 2018 on <i>Single Image Rolling Shutter Rectification</i></td></tr>
+        <tr><td class="dissem">Nov 9, 2017</td><td class="dissem">Course lecture on <i>Generative Adversarial Networks - Applications</i> (Deep Learning for Imaging course)</td></tr>
+        <tr><td class="dissem">Mar 23, 2017</td><td class="dissem">Course lecture on <i>Non-local Means Filtering</i> (Image Signal Processing course)</td></tr>
+        <tr><td class="dissem">Mar 22, 2017</td><td class="dissem">Ph.D Seminar II on <i>Single Image Rolling Shutter Distortion Correction</i></td></tr>
+        <tr><td class="dissem">Jul 23, 2017</td><td class="dissem">Oral presentation at CVPR 2017 on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr>
+        <tr><td class="dissem">Jul 21, 2017</td><td class="dissem">Poster presentation at CCD 2017 workshop on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr>
+        <tr><td class="dissem">Sep 23, 2016</td><td class="dissem">Ph.D Seminar I on <i>Change Detection in Rolling Shutter Cameras</i></td></tr>
+        <tr><td class="dissem">Jun 1, 2016</td><td class="dissem">Talk at Computational Cameras and Displays lab, Rice University on <i>Rolling Shutter Rectification</i></td></tr>
+        <tr><td class="dissem">Feb 3, 2015</td><td class="dissem">Course lecture on <i>Image Mosaicing</i> (Image Signal Processing course)</td></tr>
+        </table> <br>
+
         <h2>Awards and Grants</h2>
         <hr>
         Received USD 3000 travel grant from Google for CVPR 2017<br>
