--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <h2>Awards and Grants</h2>
         <hr>
         Received USD 3000 travel grant from Google for CVPR 2017<br>
-        Selected for CVPR 2016 Docotoral Consortium<br>
+        Selected for CVPR 2016 Doctoral Consortium<br>
         Institute Research Scholar Award, IIT Madras, 2015<br><br>
 
 
