--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <td class="edu">Past</td>
                 <td>Bachelor of Engineering<br>
                     Department of Electronics and Communication Engineering<br>
-                    Anna University, India</td>
+                    <a href="https://www.annauniv.edu/">Anna University, India</a></td>
             </tr>
         </table>
 
@@ -210,23 +210,25 @@
         <h2>Academic Talks</h2>
         <hr>
         <table> 
-        <tr><td class="dissem">May 5, 2018</td><td class="dissem">Poster presentation at ICCP 2018 on <i>Single Image Rolling Shutter Rectification</i></td></tr>
-        <tr><td class="dissem">Nov 9, 2017</td><td class="dissem">Course lecture on <i>Generative Adversarial Networks - Applications</i> (Deep Learning for Imaging course)</td></tr>
-        <tr><td class="dissem">Mar 23, 2017</td><td class="dissem">Course lecture on <i>Non-local Means Filtering</i> (Image Signal Processing course)</td></tr>
-        <tr><td class="dissem">Mar 22, 2017</td><td class="dissem">Ph.D Seminar II on <i>Single Image Rolling Shutter Distortion Correction</i></td></tr>
-        <tr><td class="dissem">Jul 23, 2017</td><td class="dissem">Oral presentation at CVPR 2017 on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr>
-        <tr><td class="dissem">Jul 21, 2017</td><td class="dissem">Poster presentation at CCD 2017 workshop on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr>
-        <tr><td class="dissem">Sep 23, 2016</td><td class="dissem">Ph.D Seminar I on <i>Change Detection in Rolling Shutter Cameras</i></td></tr>
+        <tr><td class="dissem">May 5, 2018</td><td class="dissem">Poster talk at ICCP 2018 on <i>Single Image Rolling Shutter Rectification</i> <a href="talks/2018_iccp_poster.pdf" class="icon">&#x1F4C4</a></td></tr>
+        <tr><td class="dissem">Nov 9, 2017</td><td class="dissem">Course lecture on <i>Generative Adversarial Networks - Applications</i> (Deep Learning for Imaging course) <a href="talks/2017_GAN_Applications.pptx" class="icon">&#x1F4C4</a></td></tr>
+        <tr><td class="dissem">Mar 23, 2017</td><td class="dissem">Course lecture on <i>Non-local Means Filtering</i> (Image Signal Processing course) <a href="talks/2017_NLM_filter.pptx" class="icon">&#x1F4C4</a></td></tr>
+        <tr><td class="dissem">Mar 22, 2017</td><td class="dissem">Ph.D Public Seminar II on <i>Single Image Rolling Shutter Distortion Correction</i> <a href="talks/PhDSeminar2.pptx" class="icon">&#x1F4C4</a></td></tr>
+        <!-- <tr><td class="dissem">Jul 23, 2017</td><td class="dissem">Oral presentation at CVPR 2017 on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr> -->
+        <tr><td class="dissem">Jul 21, 2017</td><td class="dissem">Poster talk at CCD 2017 workshop on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i> <a href="talks/2017_cvpr_poster.pdf" class="icon">&#x1F4C4</a></td></tr>
+        <tr><td class="dissem">Sep 23, 2016</td><td class="dissem">Ph.D Public Seminar I on <i>Change Detection in Rolling Shutter Cameras</i> <a href="talks/PhDSeminar1.pptx" class="icon">&#x1F4C4</a></td></tr>
+        <tr><td class="dissem">Jun 28, 2016</td><td class="dissem">Poster talk at CVPR 2016 Doctoral Consortium on <i>Study of Camera Motion in Rolling Shutter Cameras</i><a href="talks/2016_cvpr_dc_poster.pdf" class="icon">&#x1F4C4</a></td></tr>
         <tr><td class="dissem">Jun 1, 2016</td><td class="dissem">Talk at Computational Cameras and Displays lab, Rice University on <i>Rolling Shutter Rectification</i></td></tr>
         <tr><td class="dissem">Feb 3, 2015</td><td class="dissem">Course lecture on <i>Image Mosaicing</i> (Image Signal Processing course)</td></tr>
         </table> <br>
 
         <h2>Awards and Grants</h2>
         <hr>
-        Received USD 3000 travel grant from Google for CVPR 2017<br>
-        Selected for CVPR 2016 Doctoral Consortium<br>
-        Institute Research Scholar Award, IIT Madras, 2015<br><br>
-
+        <ul>
+        <li>Received USD 3000 travel grant from Google for CVPR 2017</li>
+        <li>Selected for CVPR 2016 Doctoral Consortium</li>
+        <li>Institute Research Scholar Award, IIT Madras, 2015</li>
+        </ul><br>
 
         <h2>Social Activities</h2>
         <hr>
