--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     Vijay Rengarajan<br>
                     Department of Electrical Engineering<br>
                     Indian Institute of Technology Madras, Nov 2017<br>
-                    <a href="https://drive.google.com/file/d/1RZ-o4HhUJguvTXRLJPmB40wFzMGp9GkR/view?usp=sharing">PDF</a>
+                    <a href="https://drive.google.com/file/d/1RZ-o4HhUJguvTXRLJPmB40wFzMGp9GkR/view?usp=sharing">PDF</a>&nbsp;&nbsp;
+                    <a href="https://drive.google.com/file/d/1Ay0mhmprd525EIGHVqf9m0sSLZYQv6Ga/view?usp=sharing">Defence Talk</a>
                 </td>
             </tr>
         </table>
