--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     Vijay Rengarajan, Yogesh Balaji, and A.N. Rajagopalan<br>
                     International Conference on Computer Vision and Pattern Recogniton<br>
                     <b>CVPR 2017 (Oral)</b><br>
-                    <a href="pdf/2017_cvpr.pdf">Paper</a> 
+                    <a href="pdf/2017_cvpr.pdf">Paper</a> <a href="pdf/2017_cvpr_slides.pptx">Slides</a>  <a href="pdf/2017_cvpr_poster.pdf">Poster</a> 
                 </td>
             </tr>
 
