--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
         <h1>Vijay Rengarajan</h1>
-        <h4>Research Associate, CMU</h4>
+        <h4>Post-doctoral Research Associate, CMU</h4>
         
         <code>v<i>angarai</i>@andrew.cmu.edu</code><br>
         <a href="pdf/cv_vijay.pdf">CV</a><br>
@@ -50,7 +50,7 @@
         <table>
             <tr>
                 <td class="edu">Now</td>
-                <td>Post-doctoral researcher at Carnegie Mellon University<br>
+                <td>Post-doctoral Research Associate at Carnegie Mellon University<br>
                     <a href="http://imagesci.ece.cmu.edu/">Image Science lab, Department of ECE</a><br>
                     with <a href="https://users.ece.cmu.edu/~saswin/">Prof. Aswin Sankaranarayanan</a></td>
             </tr>
