--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <h2>Awards and Grants</h2>
         <hr>
         <ul>
-        <li>Received USD 3000 travel grant from Google for CVPR 2017</li>
+        <li>Travel grant from Google for CVPR 2017</li>
         <li>Selected for CVPR 2016 Doctoral Consortium</li>
         <li>Institute Research Scholar Award, IIT Madras, 2015</li>
         </ul><br>
