--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         
         <h2>Professional Activities</h2>
         <hr>
-        Reviewer for CVPR 2018, 2019; ICCV 2019; WACV 2016, 2017, 2018, 2019; ACCV: 2018; ICVGIP: 2016; NIPS: 2016.<br>
+        Reviewer for CVPR 2018, 2019; ICCV 2019; WACV 2016, 2017, 2018, 2019; ACCV: 2018; ICVGIP: 2016; NIPS: 2016; TIP.<br>
         Reviewer assistance for Prof. A.N.Rajagopalan for ICAPR 2015, ICVGIP 2014, CCD 2014.<br><br>
 
         <h2>Awards and Grants</h2>
