--- a/index.html
+++ b/index.html
@@ -241,11 +241,15 @@
 
         <h2>Awards and Grants</h2>
         <hr>
-        <ul>
+        <!--<ul>
         <li>Travel grant from Google for CVPR 2017</li>
         <li>Selected for CVPR 2016 Doctoral Consortium</li>
         <li>Institute Research Scholar Award, IIT Madras, 2015</li>
-        </ul><br>
+        </ul><br>-->
+        Travel grant from Google for CVPR 2017<br>
+        Selected for CVPR 2016 Doctoral Consortium<br>
+        Institute Research Scholar Award, IIT Madras, 2015<br>
+        <br>
         
         <h2>Social Activities</h2>
         <hr>
