--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     </script>
 
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Zilla+Slab:400,400italic,700' rel='stylesheet' type='text/css'>
-    <!--<link href='https://fonts.googleapis.com/css?family=Gentium+Basic:400,400italic,700' rel='stylesheet' type='text/css'>-->
-    <link href='https://fonts.googleapis.com/css?family=Eczar:400,400italic,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <base target="_blank">
     <title>
