--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <base target="_blank">
     <title>
@@ -25,7 +25,7 @@
 
 
         <h1>Vijay Rengarajan</h1>
-        <h4>Research Scientist, CMU</h4>
+        <h4>Research Scientist, Carnegie Mellon University</h4>
         
         <code>v<i>angarai</i>@andrew.cmu.edu</code><br>
         <a href="pdf/vijay_cv.pdf">CV</a><br>
@@ -68,7 +68,7 @@
         </table>
 
 
-        <h2>Thesis Dissertation</h2>
+        <h2>Ph.D. Thesis Dissertation</h2>
         <hr>
         <table>
             <tr>
@@ -77,7 +77,7 @@
                     Vijay Rengarajan<br>
                     Department of Electrical Engineering<br>
                     Indian Institute of Technology Madras, Nov 2017<br>
-                    <a href="https://drive.google.com/file/d/1RZ-o4HhUJguvTXRLJPmB40wFzMGp9GkR/view?usp=sharing">PDF</a>&nbsp;&nbsp;
+                    <a href="https://drive.google.com/file/d/1RZ-o4HhUJguvTXRLJPmB40wFzMGp9GkR/view?usp=sharing">Thesis PDF</a>&nbsp;&nbsp;
                     <a href="https://drive.google.com/file/d/1Ay0mhmprd525EIGHVqf9m0sSLZYQv6Ga/view?usp=sharing">Defence Talk</a>
                 </td>
             </tr>
@@ -86,6 +86,18 @@
         <h2>Research</h2>
         <hr>
         <table class="col-chg">
+            <tr class="col-chg">
+                    <td>
+                        <img class="table-icon" src="img/2019_arxiv.jpg">
+                    </td>
+                    <td>
+                        <p class="paper-title">Photosequencing of Motion Blur using Short and Long Exposures</p>
+                        Vijay Rengarajan, Shuo Zhao, Ruiwen Zhen, John Glotzbach, Hamid Sheikh, and Aswin Sankaranarayanan<br>
+                        arXiv preprint, 2019<br>
+                        <a href="https://arxiv.org/abs/1912.06102">Paper</a><br>
+                        <a href="photoseq_blur.html">Project Page</a> 
+                    </td>
+            </tr>
             <tr class="col-chg">
                 <td>
                     <img class="table-icon" src="img/2018_icip.jpg">
