--- a/photoseq_blur.html
+++ b/photoseq_blur.html
@@ -52,6 +52,12 @@ Photosequencing aims to transform a motion blurred image to a sequence of sharp 
 
 <br>
 
+<h2>Video</h2>
+<hr>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xosPuXJriw8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+
 <h2>Publication</h2>
 <hr>
 Photosequencing of Motion Blur using Short and Long Exposures<br>
