Update pdf link of CVPRW 2020

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     <td>
                         <p class="paper-title">Photosequencing of Motion Blur using Short and Long Exposures</p>
                         Vijay Rengarajan, Shuo Zhao, Ruiwen Zhen, John Glotzbach, Hamid Sheikh, and Aswin Sankaranarayanan<br>
-                        arXiv preprint, 2019<br>
-                        <a href="https://arxiv.org/abs/1912.06102">Paper</a><br>
+                        <b>NTIRE Workshop, CVPR 2020</b><br>
+                        <a href="pdf/2020_cvprw.pdf">Paper</a><br>
                         <a href="photoseq_blur.html">Project Page</a> 
                     </td>
             </tr>
