--- a/photoseq_blur.html
+++ b/photoseq_blur.html
@@ -25,7 +25,7 @@
 
     <h2>Photosequencing of Motion Blur using Short and Long Exposures</h2>
     Vijay Rengarajan, Shuo Zhao, Ruiwen Zhen, John Glotzbach, Hamid Sheikh, and Aswin Sankaranarayanan<br>
-    arXiv preprint<br>
+    NTIRE Workshop, CVPR 2020<br>
 
     <br>
 
@@ -62,7 +62,7 @@ Photosequencing aims to transform a motion blurred image to a sequence of sharp 
 <hr>
 Photosequencing of Motion Blur using Short and Long Exposures<br>
 Vijay Rengarajan, Shuo Zhao, Ruiwen Zhen, John Glotzbach, Hamid Sheikh, and Aswin Sankaranarayanan<br>
-arXiv preprint<br>
-<a href="https://arxiv.org/abs/1912.06102">Paper</a><br>
+NTIRE Workshop, CVPR 2020<br>
+<a href="pdf/2020_cvprw.pdf">Paper</a><br>
 
 <br>
