--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <h2>Research</h2>
         <hr>
-        <table class="col-chg">
+        \textbf{Deep Intermodal Video Analytics} (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU), Prof. Deva Ramanan (RI, CMU), and Prof. Rama Chellappa (ECE, JHU).<br> The DIVA program of IARPA seeks to develop robust automatic activity detection for a streaming video environment. We work on a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise. As on March 17th 2021, our team UMCMU is placed <i>second</i> based on p_miss and placed <i>third</i> based on nAUDC metrics on Activities in Extended Video 2021, Sequestered Data Leaderboard (ActEV SDL).<br>
             <tr class="col-chg">
                     <td>
                         <img class="table-icon" src="img/2019_arxiv.jpg">
