--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h4>Research Scientist, Carnegie Mellon University</h4>
         
         <code>v<i>angarai</i>@andrew.cmu.edu</code><br>
-        <a href="pdf/vijay_cv.pdf">CV</a><br>
+        <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
         <hr>
         
         <table>
