--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
         <table>
             <tr class="col-chg">
                     <td>
+<!--                         <img class="table-icon" src="img/2019_arxiv.jpg"> -->
+                    </td>
+                    <td>
+                        <p class="paper-title">\Fine-Grain Prediction of Strawberry Freshness using Subsurface Scattering</p>
+                        Jeremy Klotz, Vijay Rengarajan, and Aswin Sankaranarayanan<br>
+                        <b>Accepted at Large-Scale Fine-Grained Food Analysis Workshop, ICCV 2021</b><br>
+                        <a href="/">Paper Soon </a><br>
+                        <a href="/">Project Page Soon</a> 
+                    </td>
+            </tr>
+            <tr class="col-chg">
+                    <td>
                         <img class="table-icon" src="img/2019_arxiv.jpg">
                     </td>
                     <td>
