--- a/index.html
+++ b/index.html
@@ -85,21 +85,22 @@
 
         <h2>Research</h2>
         <hr>
-        Project <b>Deep Intermodal Video Analytics</b> (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU) and Prof. Deva Ramanan (RI, CMU).<br> 
+        Project: <b>Deep Intermodal Video Analytics</b> (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU) and Prof. Deva Ramanan (RI, CMU).<br> 
 <!--         The DIVA program of IARPA seeks to develop robust automatic activity detection for a streaming video environment. We work on a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise. As on March 17th 2021, our team UMCMU is placed <i>second</i> based on p_miss and placed <i>third</i> based on nAUDC metrics on Activities in Extended Video 2021, Sequestered Data Leaderboard (ActEV SDL).<br><br> -->
         <ul>
             <li>Developed a robust automatic activity detection using neural network architectures for a streaming video environment.</li>
             <li>Developed a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise.</li>
-            <li>Placed first based on pmiss and second based on nAUDC metrics under Unknown Facilities/Surprise Activities on ActEV’21 Sequestered Data Leaderboard.</li>
+            <li>Placed <b>first</b> based on pmiss and <i>second</i> based on nAUDC metrics under Unknown Facilities/Surprise Activities on ActEV’21 Sequestered Data Leaderboard.</li>
             <li><a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU </li>
         </ul>
+        <br><br>
         <table>
             <tr class="col-chg">
                     <td>
 <!--                         <img class="table-icon" src="img/2019_arxiv.jpg"> -->
                     </td>
                     <td>
-                        <p class="paper-title">\Fine-Grain Prediction of Strawberry Freshness using Subsurface Scattering</p>
+                        <p class="paper-title">Fine-Grain Prediction of Strawberry Freshness using Subsurface Scattering</p>
                         Jeremy Klotz, Vijay Rengarajan, and Aswin Sankaranarayanan<br>
                         <b>Accepted at Large-Scale Fine-Grained Food Analysis Workshop, ICCV 2021</b><br>
                         <a href="/">Paper Soon </a><br>
