--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <table>
             <tr class="col-chg">
                     <td>
-<!--                         <img class="table-icon" src="img/2019_arxiv.jpg"> -->
+                        <img class="table-icon" src="img/soon.jpg">
                     </td>
                     <td>
                         <p class="paper-title">Fine-Grain Prediction of Strawberry Freshness using Subsurface Scattering</p>
