--- a/index.html
+++ b/index.html
@@ -85,16 +85,28 @@
 
         <h2>Research</h2>
         <hr>
-        Project: <b>Deep Intermodal Video Analytics</b> (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU) and Prof. Deva Ramanan (RI, CMU).<br> 
-<!--         The DIVA program of IARPA seeks to develop robust automatic activity detection for a streaming video environment. We work on a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise. As on March 17th 2021, our team UMCMU is placed <i>second</i> based on p_miss and placed <i>third</i> based on nAUDC metrics on Activities in Extended Video 2021, Sequestered Data Leaderboard (ActEV SDL).<br><br> -->
+<!--         Project: <b>Deep Intermodal Video Analytics</b> (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU) and Prof. Deva Ramanan (RI, CMU).<br> 
+        The DIVA program of IARPA seeks to develop robust automatic activity detection for a streaming video environment. We work on a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise. As on March 17th 2021, our team UMCMU is placed <i>second</i> based on p_miss and placed <i>third</i> based on nAUDC metrics on Activities in Extended Video 2021, Sequestered Data Leaderboard (ActEV SDL).<br><br>
         <ul>
             <li>Developed a robust automatic activity detection using neural network architectures for a streaming video environment.</li>
             <li>Developed a surprise activity detection system which detects unknown activities in unknown capture environments using only a few query example activities revealed at run-time as a surprise.</li>
             <li>Placed <b>first</b> based on pmiss and <i>second</i> based on nAUDC metrics under Unknown Facilities/Surprise Activities on ActEV’21 Sequestered Data Leaderboard.</li>
             <li><a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU </li>
         </ul>
-        <br><br>
+        <br><br> -->
         <table>
+            <tr class="col-chg">
+                    <td>
+                        <img class="table-icon" src="img/2021_surprise.jpg">
+                    </td>
+                    <td>
+                        <p class="paper-title">Action Retrieval for Surprise Activity Detection in Untrimmed Videos</p>
+                        Vijay Rengarajan, Seunghwan Cha, Aswin Sankaranarayanan, and Deva Ramanan<br>
+                        <i>Deep Intermodal Video Analytics project (Collaboration with UMD/JHU)</i><br>
+                        <b><i>First</i> on pmiss and <i>second</i> on nAUDC metrics on ActEV’21 Sequestered Data Leaderboard (Surprise Activities).</b><br>
+                        <a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU
+                    </td>
+            </tr>
             <tr class="col-chg">
                     <td>
                         <img class="table-icon" src="img/soon.jpg">
@@ -114,7 +126,7 @@
                     <td>
                         <p class="paper-title">Photosequencing of Motion Blur using Short and Long Exposures</p>
                         Vijay Rengarajan, Shuo Zhao, Ruiwen Zhen, John Glotzbach, Hamid Sheikh, and Aswin Sankaranarayanan<br>
-                        <b>NTIRE Workshop, CVPR 2020</b><br>
+                        <b>New Trends in Image Restoration and Enhancement (NTIRE) Workshop, CVPR 2020</b><br>
                         <a href="pdf/2020_cvprw.pdf">Paper</a><br>
                         <a href="photoseq_blur.html">Project Page</a> 
                     </td>
