--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <td>
                         <p class="paper-title">Action Retrieval for Surprise Activity Detection in Untrimmed Videos</p>
                         Vijay Rengarajan, Seunghwan Cha, Aswin Sankaranarayanan, and Deva Ramanan<br>
-                        <i>Deep Intermodal Video Analytics project (Collaboration with UMD/JHU)</i><br>
+                        <i>Collaboration with UMD/JHU</i><br>
                         <b><i>First</i> on pmiss and <i>second</i> on nAUDC metrics on ActEV’21 Sequestered Data Leaderboard (Surprise Activities).</b><br>
                         <a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU
                     </td>
