--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         
         <h2>Professional Activities</h2>
         <hr>
-        Reviewer for TIP, TMM, ECCV 2020, AAAI 2020, CVPR 2018 2019, ICCV 2019, ACCV 2018, WACV 2016 2017 2018 2019, NeurIPS 2016, ICVGIP 2016 <br>
+        Reviewer for TCI, TIP, TMM, ECCV 2020, AAAI 2020, CVPR 2018 2019 2021, ICCV 2019, ACCV 2018, WACV 2015 2016 2018 2019, NeurIPS 2016, ICVGIP 2016 <br>
         Reviewer assistance for Prof. A.N.Rajagopalan for ICAPR 2015, ICVGIP 2014, CCD 2014.<br><br>
 
         <h2>Awards and Grants</h2>
