--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
         <h1>Vijay Rengarajan</h1>
-        <h4>Research Scientist, Carnegie Mellon University</h4>
+        <h4>Research Scientist, Facebook Reality Labs</h4>
         
-        <code>v<i>angarai</i>@andrew.cmu.edu</code><br>
+        <code>ap<i>vijay</i>@fb.com</code><br>
         <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
         <hr>
         
@@ -49,22 +49,26 @@
         <table>
             <tr>
                 <td class="edu">Now</td>
+                <td>Research Scientist at Facebook Reality Labs<br>
+            </tr>
+            <tr>
+                <td class="edu">Before</td>
                 <td>Research Scientist at Carnegie Mellon University<br>
                     <a href="http://imagesci.ece.cmu.edu/">Image Science lab, Department of ECE</a><br>
                     with <a href="https://users.ece.cmu.edu/~saswin/">Prof. Aswin Sankaranarayanan</a></td>
             </tr>
             <tr>
-                <td class="edu">Before</td>
+                <td class="edu">Past</td>
                 <td>M.S and Ph.D at Indian Institute of Technology Madras<br>
                     <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE<br>
                     under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td>
             </tr>
-            <tr>
+<!--             <tr>
                 <td class="edu">Past</td>
                 <td>Bachelor of Engineering<br>
                     Department of Electronics and Communication Engineering<br>
                     <a href="http://www.psgtech.edu/">PSG College of Tech.</a>, <a href="https://www.annauniv.edu/">Anna University, India</a></td>
-            </tr>
+            </tr> -->
         </table>
 
 
