Add 2021_iccvw pdf and jpg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <h1>Vijay Rengarajan</h1>
-        <h4>Research Scientist, Facebook Reality Labs</h4>
+        <h4>Research Scientist, Meta (Facebook) Reality Labs</h4>
         
         <code>ap<i>vijay</i>@fb.com</code><br>
         <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
@@ -49,7 +49,7 @@
         <table>
             <tr>
                 <td class="edu">Now</td>
-                <td>Research Scientist at Facebook Reality Labs<br>
+                <td>Research Scientist at Meta (Facebook) Reality Labs<br>
             </tr>
             <tr>
                 <td class="edu">Before</td>
@@ -113,14 +113,13 @@
             </tr>
             <tr class="col-chg">
                     <td>
-                        <img class="table-icon" src="img/soon.jpg">
+                        <img class="table-icon" src="img/2021_iccvw.jpg">
                     </td>
                     <td>
                         <p class="paper-title">Fine-Grain Prediction of Strawberry Freshness using Subsurface Scattering</p>
                         Jeremy Klotz, Vijay Rengarajan, and Aswin Sankaranarayanan<br>
-                        <b>Accepted at Large-Scale Fine-Grained Food Analysis Workshop, ICCV 2021</b><br>
-                        <a href="/">Paper Soon </a><br>
-                        <a href="/">Project Page Soon</a> 
+                        <b>Large-Scale Fine-Grained Food Analysis Workshop, ICCV 2021</b><br>
+                        <a href="pdf/2021_iccvw.pdf">Paper</a>
                     </td>
             </tr>
             <tr class="col-chg">
