--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     <q>How does motion affect camera capture?</q><br><br>
 
-                    I am interested in the intersection of image processing and computational photography asking questions that concern with how to obtain what we want from a camera -- the scene as an image as we see, the camera motion, the object motion, the changes occurred at different times, and motion blurring and geometric distortions or the lack of them.
+                    I am interested in the intersection of computational photography and image processing asking questions that concern with how to obtain what we want from a camera -- the scene as an image as we see, the camera motion, the object motion, the changes occurred at different times, and motion blurring and geometric distortions or the lack of them.
                 </td>
             </tr>
         </table>
@@ -50,6 +50,7 @@
             <tr>
                 <td class="edu">Now</td>
                 <td>Research Scientist at Meta (Facebook) Reality Labs<br>
+                    Computational Photography, On-device Computer Vision/AI</td>
             </tr>
             <tr>
                 <td class="edu">Before</td>
