--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         <p class="paper-title">Action Retrieval for Surprise Activity Detection in Untrimmed Videos</p>
                         Vijay Rengarajan, Seunghwan Cha, Aswin Sankaranarayanan, and Deva Ramanan<br>
                         <i>Collaboration with UMD/JHU</i><br>
-                        <b><i>First</i> on pmiss and <i>second</i> on nAUDC metrics on ActEV’21 Sequestered Data Leaderboard (Surprise Activities),</b> August 2021<br>
-                        <a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU
+                        <b><i>First</i> on pmiss and <i>second</i> on nAUDC metrics on ActEV’21 Sequestered Data Leaderboard (Surprise Activities)</b><br>
+                        <a href="https://actev.nist.gov/sdl#tab_leaderboard" target="_blank">Leaderboard</a> -&gt; Activity Type: Surprise Activities -&gt; Team Name: UMCMU, August 2021
                     </td>
             </tr>
             <tr class="col-chg">
