--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <h1>Vijay Rengarajan</h1>
         <h4>Research Scientist, Meta (Facebook) Reality Labs</h4>
+        <hr>
+        
         <!--
         <code>ap<i>vijay</i>@fb.com</code><br>
         <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
@@ -64,13 +66,14 @@
                     <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE<br>
                     under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td>
             </tr>
+-->
 <!--             <tr>
                 <td class="edu">Past</td>
                 <td>Bachelor of Engineering<br>
                     Department of Electronics and Communication Engineering<br>
                     <a href="http://www.psgtech.edu/">PSG College of Tech.</a>, <a href="https://www.annauniv.edu/">Anna University, India</a></td>
             </tr> -->
-        </table>
+<!--        </table>
 
 
         <h2>Ph.D. Thesis Dissertation</h2>
