--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <h4>Research Scientist, Meta (Facebook) Reality Labs</h4>
         <hr>
         
-        <!--
         <code>ap<i>vijay</i>@fb.com</code><br>
         <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
         <hr>
@@ -39,11 +38,18 @@
                     <img class="photo-icon" src="img/vijay.jpg">&nbsp;&nbsp;
                 </td>
                 <td>
+                    <!--
                     <q>Do cameras see what we see?</q><br> 
 
                     <q>How does motion affect camera capture?</q><br><br>
 
                     I am interested in the intersection of computational photography and image processing asking questions that concern with how to obtain what we want from a camera -- the scene as an image as we see, the camera motion, the object motion, the changes occurred at different times, and motion blurring and geometric distortions or the lack of them.
+                    -->
+                    I am interested in the intersection of computational photography and image processing.<br>
+                    <q>How does a camera see colors compared to human eyes and brain?</q><br>
+                    <q>How does motion affect what is seen by the camera?</q><br>
+                    <q>Are these properties of cameras liabilities, or does being different from human eyes provide a complementary advantage?</q>
+                     
                 </td>
             </tr>
         </table>
@@ -66,7 +72,7 @@
                     <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE<br>
                     under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td>
             </tr>
--->
+
 <!--             <tr>
                 <td class="edu">Past</td>
                 <td>Bachelor of Engineering<br>
