Add eccv 2022 details

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
         <table>
             <tr class="col-chg">
                     <td>
+                        <img class="table-icon" src="img/2022_eccv.jpg">
+                    </td>
+                    <td>
+                        <p class="paper-title">Learning Spatio-Temporal Downsampling for Effective Video Upscaling</p>
+                        Xiaoyu Xiang, Yapeng Tian, Vijay Rengarajan, Lucas Young, Bo Zhu, Rakesh Ranjan<br>
+                        European Conference on Computer Vision<br>
+                        <b>ECCV 2021</b><br>
+                        <a href="pdf/2022_eccv.pdf">Paper</a> <a href="pdf/2022_eccv_poster.pdf">Poster</a>
+                    </td>
+            </tr>
+            <tr class="col-chg">
+                    <td>
                         <img class="table-icon" src="img/2021_iccvw.jpg">
                     </td>
                     <td>
