--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     Department of Electronics and Communication Engineering<br>
                     <a href="http://www.psgtech.edu/">PSG College of Tech.</a>, <a href="https://www.annauniv.edu/">Anna University, India</a></td>
             </tr> -->
-<!--        </table>
+            </table>
+<!--        
 
 
         <h2>Ph.D. Thesis Dissertation</h2>
@@ -97,6 +98,7 @@
             </tr>
         </table>
         -->
+            
         <h2>Research</h2>
         <hr>
 <!--         Project: <b>Deep Intermodal Video Analytics</b> (DIVA) with Prof. Aswin Sankaranarayanan (ECE, CMU) and Prof. Deva Ramanan (RI, CMU).<br> 
