--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h1>Vijay Rengarajan</h1>
         <h4>Research Scientist, Meta (Facebook) Reality Labs</h4>
-        <hr>
+<!--         <hr> -->
         
         <code>ap<i>vijay</i>@meta.com</code><br>
         <a href="pdf/vijay_cv_2021.pdf">CV</a><br>
@@ -295,6 +295,7 @@
             </tr>
         </table>
 
+        <!--
         <h2>Academic Talks</h2>
         <hr>
         (apart from conference publication talks.)
@@ -310,11 +311,13 @@
         <tr><td class="dissem">Jun 1, 2016</td><td class="dissem">Talk at Computational Cameras and Displays lab, Rice University on <i>Rolling Shutter Rectification</i></td></tr>
         <tr><td class="dissem">Feb 3, 2015</td><td class="dissem">Course lecture on <i>Image Mosaicing</i> (Image Signal Processing course)</td></tr>
         </table> <br>
+        -->
         
         <h2>Professional Activities</h2>
         <hr>
         Reviewer for TCI, TIP, TMM, ECCV 2020, AAAI 2020, CVPR 2018 2019 2021, ICCV 2019, ACCV 2018, WACV 2015 2016 2018 2019, NeurIPS 2016, ICVGIP 2016 <br>
-        Reviewer assistance for Prof. A.N.Rajagopalan for ICAPR 2015, ICVGIP 2014, CCD 2014.<br><br>
+<!--         Reviewer assistance for Prof. A.N.Rajagopalan for ICAPR 2015, ICVGIP 2014, CCD 2014.<br> -->
+    <br>
 <!--
         <h2>Awards and Grants</h2>
         <hr>
