--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
         <tr><td class="dissem">Nov 9, 2017</td><td class="dissem">Course lecture on <i>Generative Adversarial Networks - Applications</i> (Deep Learning for Imaging course) <a href="talks/2017_GAN_Applications.pptx" class="icon">&#x1F4C4</a></td></tr>
         <tr><td class="dissem">Mar 23, 2017</td><td class="dissem">Course lecture on <i>Non-local Means Filtering</i> (Image Signal Processing course) <a href="talks/2017_NLM_filter.pptx" class="icon">&#x1F4C4</a></td></tr>
         <tr><td class="dissem">Mar 22, 2017</td><td class="dissem">Ph.D Public Seminar II on <i>Single Image Rolling Shutter Distortion Correction</i> <a href="talks/PhDSeminar2.pptx" class="icon">&#x1F4C4</a></td></tr>
+        -->
         <!-- <tr><td class="dissem">Jul 23, 2017</td><td class="dissem">Oral presentation at CVPR 2017 on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i></td></tr> -->
+        <!-- 
         <tr><td class="dissem">Jul 21, 2017</td><td class="dissem">Poster talk at CCD 2017 workshop on <i>Unrolling the Shutter: CNN to Correct Motion Distortions</i> <a href="talks/2017_cvpr_poster.pdf" class="icon">&#x1F4C4</a></td></tr>
         <tr><td class="dissem">Sep 23, 2016</td><td class="dissem">Ph.D Public Seminar I on <i>Change Detection in Rolling Shutter Cameras</i> <a href="talks/PhDSeminar1.pptx" class="icon">&#x1F4C4</a></td></tr>
         <tr><td class="dissem">Jun 28, 2016</td><td class="dissem">Poster talk at CVPR 2016 Doctoral Consortium on <i>Study of Camera Motion in Rolling Shutter Cameras</i><a href="talks/2016_cvpr_dc_poster.pdf" class="icon">&#x1F4C4</a></td></tr>
@@ -315,7 +317,8 @@
         
         <h2>Professional Activities</h2>
         <hr>
-        Reviewer for TCI, TIP, TMM, ECCV 2020, AAAI 2020, CVPR 2018 2019 2021, ICCV 2019, ACCV 2018, WACV 2015 2016 2018 2019, NeurIPS 2016, ICVGIP 2016 <br>
+        Reviewer for TCI, TIP, TMM, ECCV, AAAI, CVPR, ICCV, ACCV, WACV, NeurIPS, ICVGIP <br>
+<!--         Reviewer for TCI, TIP, TMM, ECCV 2020, AAAI 2020, CVPR 2018 2019 2021, ICCV 2019, ACCV 2018, WACV 2015 2016 2018 2019, NeurIPS 2016, ICVGIP 2016 <br> -->
 <!--         Reviewer assistance for Prof. A.N.Rajagopalan for ICAPR 2015, ICVGIP 2014, CCD 2014.<br> -->
     <br>
 <!--
