--- a/index.html
+++ b/index.html
@@ -113,14 +113,38 @@
         <table>
             <tr class="col-chg">
                     <td>
+                        <img class="table-icon" src="img/2023_cvpr.jpg">
+                    </td>
+                    <td>
+                        <p class="paper-title">Learning Neural Duplex Radiance Fields for Real-Time View Synthesis</p>
+                        Ziyu Wan, Christian Richardt, Aljaz Bozic, Chao Li, Vijay Rengarajan, Seonghyeon Nam, Xiaoyu Xiang, Tuotuo Li, Bo Zhu, Rakesh Ranjan, and Jing Liao<br>
+                        International Conference on Computer Vision and Pattern Recogniton<br>
+                        <b>CVPR 2023</b><br>
+<!--                         <a href="pdf/2022_eccv.pdf">Paper</a> <a href="pdf/2022_eccv_poster.pdf">Poster</a> -->
+                    </td>
+            </tr>
+            <tr class="col-chg">
+                    <td>
                         <img class="table-icon" src="img/2022_eccv.jpg">
                     </td>
                     <td>
                         <p class="paper-title">Learning Spatio-Temporal Downsampling for Effective Video Upscaling</p>
-                        Xiaoyu Xiang, Yapeng Tian, Vijay Rengarajan, Lucas Young, Bo Zhu, Rakesh Ranjan<br>
+                        Xiaoyu Xiang, Yapeng Tian, Vijay Rengarajan, Lucas Young, Bo Zhu, and Rakesh Ranjan<br>
                         European Conference on Computer Vision<br>
                         <b>ECCV 2022</b><br>
                         <a href="pdf/2022_eccv.pdf">Paper</a> <a href="pdf/2022_eccv_poster.pdf">Poster</a>
+                    </td>
+            </tr>
+            <tr class="col-chg">
+                    <td>
+                        <img class="table-icon" src="img/2021_arxiv.jpg">
+                    </td>
+                    <td>
+                        <p class="paper-title">Programmable Spectral Filter Arrays for Hyperspectral Imaging</p>
+                        Vishwanath Saragadam, Vijay Rengarajan, Ryuichi Tadano, Tuo Zhuang, Hideki Oyaizu, Jun Murayama and Aswin Sankaranarayanan<br>
+                        arXiv preprint<br>
+                        <b>arXiv 2021</b><br>
+                        <a href="https://arxiv.org/pdf/2109.14450.pdf">Paper</a>
                     </td>
             </tr>
             <tr class="col-chg">
