--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <img class="table-icon" src="img/2021_arxiv.jpg">
                     </td>
                     <td>
-                        <p class="paper-title">Programmable Spectral Filter Arrays for Hyperspectral Imaging</p>
+                        <p class="paper-title">Programmable Spectral Filter Arrays using Phase Spatial Light Modulators</p>
                         Vishwanath Saragadam, Vijay Rengarajan, Ryuichi Tadano, Tuo Zhuang, Hideki Oyaizu, Jun Murayama and Aswin Sankaranarayanan<br>
                         arXiv preprint<br>
                         <b>arXiv 2021</b><br>
