--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </tr>
         </table>
         
-        <table>
+<!--         <table>
             <tr>
                 <td class="edu">Now</td>
                 <td>Research Scientist at Meta (Facebook) Reality Labs<br>
@@ -99,14 +99,14 @@
                     <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE<br>
                     under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td>
             </tr>
-
+ -->
 <!--             <tr>
                 <td class="edu">Past</td>
                 <td>Bachelor of Engineering<br>
                     Department of Electronics and Communication Engineering<br>
                     <a href="http://www.psgtech.edu/">PSG College of Tech.</a>, <a href="https://www.annauniv.edu/">Anna University, India</a></td>
             </tr> -->
-            </table>
+<!--             </table> -->
 <!--        
 
 
