--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <h4>Research Scientist, Meta (Facebook) Reality Labs</h4>
 <!--         <hr> -->
         
-        <code>ap<i>vijay</i>@meta.com</code><br>
+<!--         <code>ap<i>vijay</i>@meta.com</code><br> -->
+        <code>urapvr@gmail.com</code><br>
         <a href="pdf/vijay_cv_2025.pdf">CV</a><br>
         <hr>
         
