--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
                     </tr>
                     <tr>
                         <td class="edu">Past</td>
-                        <td>M.S and Ph.D at Indian Institute of Technology Madras<br>
-                            <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE<br>
-                            under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td>
+                        <td>Ph.D at Indian Institute of Technology Madras<br>
+                            <a href="http://www.ee.iitm.ac.in/ipcvlab/">Image Processing and Computer Vision lab</a>, Department of EE
+                            </td>
+<!--                             under the supervision of <a href="http://www.ee.iitm.ac.in/~raju">Prof. A.N. Rajagopalan</a> and <a href="http://www.ee.iitm.ac.in/user/aravind/">Prof. R. Aravind</a></td> -->
                     </tr>
         
         <!--             <tr>
